--- a/css/main.css
+++ b/css/main.css
@@ -169,6 +169,36 @@ textarea {
   clear: both;
 }
 
+/**********************************
+mine mine mine mien mine
+***********************************/
+
+#container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  width: 100%;
+  height: 100%;
+}
+
+h1 {
+  font-size: 50px;
+}
+body {
+  font: 20px Helvetica, sans-serif; color: white;
+  background-color: black;
+}
+article {
+  display: block;
+  text-align: left;
+  margin: 0 auto;
+  padding: 25px;
+}
+a { color: #dc8100; text-decoration: none; }
+a:hover { color: white; text-decoration: none; }
+
 /* ==========================================================================
    EXAMPLE Media Queries for Responsive Design.
    These examples override the primary ('mobile first') styles.
