Stable populate Employees. Adding navbar functionality/structure

--- a/car-shop/public/views/index.html
+++ b/car-shop/public/views/index.html
@@ -44,18 +44,20 @@
 
   <!-- Content -->
 
+  <nav class="navbar navbar-dark bg-dark fixed-top">
+    <a class="navbar-brand" href="#">CarShop</a>
+
+  </nav>
+
+
   <div class="container my-5">
     <div class="row justify-content-center">
-        <table class="table table-hover">
+        <table id="employees-table" class="table table-hover">
           <thead class="thead-dark">
-          <tr>
-            <th>#</th>
-            <th>MemberID</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Date of birth</th>
-            <th>Municipality</th>
-          </tr>
+            <tr>
+              <th>ID</th>
+              <th>Name</th>
+            </tr>
           </thead>
           <tbody>
 
