--- a/car-shop/public/views/index.html
+++ b/car-shop/public/views/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Employees</title>
+  <title>CarShop - Home</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- For Google -->
@@ -42,58 +42,120 @@
 
 <body>
 
-  <!-- Content -->
-
+<!-- Content -->
   <nav class="navbar navbar-dark bg-dark fixed-top">
     <a class="navbar-brand" href="http://localhost:4001/">CarShop</a>
-    <a class="navbar-brand" href="#">Employees</a>
-    <a class="navbar-brand" href="#">Car models</a>
+    <a class="navbar-brand" href="http://localhost:4001/employees/index">Employees</a>
+    <a class="navbar-brand" href="http://localhost:4001/carmodels/index">Car models</a>
   </nav>
 
-  <div class="container my-5">
-    <div class="row justify-content-center">
-        <table id="employees-table" class="table table-hover">
-          <thead class="thead-dark">
-            <tr>
-              <th>ID</th>
-              <th>Name</th>
-            </tr>
-          </thead>
-          <tbody>
+    <div class="alert alert-primary" role="alert">This is the home page</div>
 
-          </tbody>
-        </table>
-    </div>
+<!-- End of content -->
 
-    <div class="row justify-content-center">
-      <div class="d-flex flex-row justify-content-center flex-wrap">
-        <button id="refresh-list" class="btn btn-dark mx-3 my-2">refresh list</button>
-        <button id="update-item" class="btn btn-dark mx-3 my-2">update item</button>
-        <button id="delete-item"class="btn btn-dark mx-3 my-2">remove item</button>
-        <button id="add-item" class="btn btn-dark mx-3 my-2">add item</button>
-      </div>
-    </div>
-
-    <div class="row">
-      <form>
-        <div class="form-group">
-          <label for="id-input">MemberID</label>
-          <input type="text" class="form-control" id="id-input" placeholder="Such as &quot;M001&quot;">
-        </div>
-      </form>
-    </div>
-
-    <div class="row">
-     <div id="response" class="alert alert-secondary d-md-none" role="alert"></div>
-    </div>
-
-  </div>
-
-  <!-- End of content -->
-
-  <!-- Scripts -->
+<!-- Scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="../javascripts/client.js" type="text/javascript"></script>
 </body>
 
 </html>
+
+<!--<!doctype html>-->
+<!--<html lang="en">-->
+
+<!--<head>-->
+<!--  <meta charset="utf-8">-->
+<!--  <title>Employees</title>-->
+<!--  <meta name="viewport" content="width=device-width, initial-scale=1">-->
+
+<!--  &lt;!&ndash; For Google &ndash;&gt;-->
+<!--  <meta name="description" content="" />-->
+<!--  <meta name="author" content="Tarek Bermalm" />-->
+<!--  <meta name="copyright" content="" />-->
+<!--  <meta name="application-name" content="" />-->
+
+<!--  &lt;!&ndash; For Facebook &ndash;&gt;-->
+<!--  <meta property="og:title" content="" />-->
+<!--  <meta property="og:type" content="" />-->
+<!--  <meta property="og:image" content="" />-->
+<!--  <meta property="og:url" content="" />-->
+<!--  <meta property="og:description" content="" />-->
+
+<!--  &lt;!&ndash; For Twitter &ndash;&gt;-->
+<!--  <meta name="twitter:card" content=""/>-->
+<!--  <meta name="twitter:title" content="" />-->
+<!--  <meta name="twitter:description" content="" />-->
+<!--  <meta name="twitter:image" content="" />-->
+
+<!--  &lt;!&ndash;tags from https://realfavicongenerator.net/&ndash;&gt;-->
+<!--  <link rel="apple-touch-icon" sizes="180x180" href="">-->
+<!--  <link rel="icon" type="image/png" sizes="32x32" href="">-->
+<!--  <link rel="icon" type="image/png" sizes="16x16" href="">-->
+<!--  <link rel="manifest" href="">-->
+<!--  <link rel="mask-icon" href="" color="#f4cb84">-->
+<!--  <link rel="shortcut icon" href="">-->
+<!--  <meta name="theme-color" content="">-->
+
+<!--  <link rel="stylesheet" href="../stylesheets/main.css">-->
+
+<!--  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">-->
+
+<!--</head>-->
+
+<!--<body>-->
+
+<!--&lt;!&ndash; Content &ndash;&gt;-->
+
+<!--<nav class="navbar navbar-dark bg-dark fixed-top">-->
+<!--  <a class="navbar-brand" href="http://localhost:4001/">CarShop</a>-->
+<!--  <a class="navbar-brand" href="#">Employees</a>-->
+<!--  <a class="navbar-brand" href="#">Car models</a>-->
+<!--</nav>-->
+
+<!--<div class="container my-5">-->
+<!--  <div class="row justify-content-center">-->
+<!--    <table id="employees-table" class="table table-hover">-->
+<!--      <thead class="thead-dark">-->
+<!--      <tr>-->
+<!--        <th>ID</th>-->
+<!--        <th>Name</th>-->
+<!--      </tr>-->
+<!--      </thead>-->
+<!--      <tbody>-->
+
+<!--      </tbody>-->
+<!--    </table>-->
+<!--  </div>-->
+
+<!--  <div class="row justify-content-center">-->
+<!--    <div class="d-flex flex-row justify-content-center flex-wrap">-->
+<!--      <button id="refresh-list" class="btn btn-dark mx-3 my-2">refresh list</button>-->
+<!--      <button id="update-item" class="btn btn-dark mx-3 my-2">update item</button>-->
+<!--      <button id="delete-item"class="btn btn-dark mx-3 my-2">remove item</button>-->
+<!--      <button id="add-item" class="btn btn-dark mx-3 my-2">add item</button>-->
+<!--    </div>-->
+<!--  </div>-->
+
+<!--  <div class="row">-->
+<!--    <form>-->
+<!--      <div class="form-group">-->
+<!--        <label for="id-input">MemberID</label>-->
+<!--        <input type="text" class="form-control" id="id-input" placeholder="Such as &quot;M001&quot;">-->
+<!--      </div>-->
+<!--    </form>-->
+<!--  </div>-->
+
+<!--  <div class="row">-->
+<!--    <div id="response" class="alert alert-secondary d-md-none" role="alert"></div>-->
+<!--  </div>-->
+
+<!--</div>-->
+
+<!--&lt;!&ndash; End of content &ndash;&gt;-->
+
+<!--&lt;!&ndash; Scripts &ndash;&gt;-->
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
+<!--<script src="../javascripts/client.js" type="text/javascript"></script>-->
+<!--</body>-->
+
+<!--</html>-->
