--- a/car-shop/public/views/carmodels.html
+++ b/car-shop/public/views/carmodels.html
@@ -1,10 +1,94 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Title</title>
+  <meta charset="utf-8">
+  <title>Car models</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- For Google -->
+  <meta name="description" content="" />
+  <meta name="author" content="Tarek Bermalm" />
+  <meta name="copyright" content="" />
+  <meta name="application-name" content="" />
+
+  <!-- For Facebook -->
+  <meta property="og:title" content="" />
+  <meta property="og:type" content="" />
+  <meta property="og:image" content="" />
+  <meta property="og:url" content="" />
+  <meta property="og:description" content="" />
+
+  <!-- For Twitter -->
+  <meta name="twitter:card" content=""/>
+  <meta name="twitter:title" content="" />
+  <meta name="twitter:description" content="" />
+  <meta name="twitter:image" content="" />
+
+  <!--tags from https://realfavicongenerator.net/-->
+  <link rel="apple-touch-icon" sizes="180x180" href="">
+  <link rel="icon" type="image/png" sizes="32x32" href="">
+  <link rel="icon" type="image/png" sizes="16x16" href="">
+  <link rel="manifest" href="">
+  <link rel="mask-icon" href="" color="#f4cb84">
+  <link rel="shortcut icon" href="">
+  <meta name="theme-color" content="">
+
+  <link rel="stylesheet" href="../stylesheets/main.css">
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 </head>
+
 <body>
 
+<!-- Content -->
+
+<nav class="navbar navbar-dark bg-dark fixed-top">
+  <a class="navbar-brand" href="http://localhost:4001/">CarShop</a>
+  <a class="navbar-brand" href="http://localhost:4001/views/employees">Employees</a>
+  <a class="navbar-brand" href="http://localhost:4001/views/carmodels">Car models</a>
+</nav>
+
+<div class="container my-5">
+
+    <table id="car-models-table" class="table table-hover">
+      <thead class="thead-dark">
+      <tr>
+        <th>Brand</th>
+        <th>ID</th>
+        <th>Model</th>
+        <th>Price</th>
+      </tr>
+      </thead>
+      <tbody>
+
+      </tbody>
+    </table>
+
+    <div class="d-flex flex-row justify-content-center flex-wrap">
+      <button id="refresh-list" class="btn btn-dark mx-3 my-2">refresh list</button>
+      <button id="delete-item"class="btn btn-dark mx-3 my-2">remove item</button>
+      <button id="add-item" class="btn btn-dark mx-3 my-2">add item</button>
+    </div>
+
+
+    <form>
+      <div class="form-group">
+        <label for="id-input">ID</label>
+        <input type="text" class="form-control" id="id-input" placeholder="Such as &quot;1&quot;">
+      </div>
+    </form>
+
+    <div id="response" class="alert alert-secondary d-md-none" role="alert"></div>
+
+</div>
+
+<!-- End of content -->
+
+<!-- Scripts -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="../javascripts/client.js" type="text/javascript"></script>
 </body>
+
 </html>
