--- a/car-shop/public/views/employees.html
+++ b/car-shop/public/views/employees.html
@@ -44,11 +44,11 @@
 
 <!-- Content -->
 
-  <nav class="navbar navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="http://localhost:4001/">CarShop</a>
-    <a class="navbar-brand" href="#">Employees</a>
-    <a class="navbar-brand" href="#">Car models</a>
-  </nav>
+<nav class="navbar navbar-dark bg-dark fixed-top">
+  <a class="navbar-brand" href="http://localhost:4001/">CarShop</a>
+  <a class="navbar-brand" href="http://localhost:4001/views/employees">Employees</a>
+  <a class="navbar-brand" href="http://localhost:4001/views/carmodels">Car models</a>
+</nav>
 
   <div class="container my-5">
     <div class="row justify-content-center">
@@ -67,9 +67,6 @@
     <div class="row justify-content-center">
       <div class="d-flex flex-row justify-content-center flex-wrap">
         <button id="refresh-list" class="btn btn-dark mx-3 my-2">refresh list</button>
-        <button id="update-item" class="btn btn-dark mx-3 my-2">update item</button>
-        <button id="delete-item"class="btn btn-dark mx-3 my-2">remove item</button>
-        <button id="add-item" class="btn btn-dark mx-3 my-2">add item</button>
       </div>
     </div>
 
