--- a/car-shop/public/views/index.html
+++ b/car-shop/public/views/index.html
@@ -45,8 +45,8 @@
 <!-- Content -->
   <nav class="navbar navbar-dark bg-dark fixed-top">
     <a class="navbar-brand" href="http://localhost:4001/">CarShop</a>
-    <a class="navbar-brand" href="http://localhost:4001/employees/index">Employees</a>
-    <a class="navbar-brand" href="http://localhost:4001/carmodels/index">Car models</a>
+    <a class="navbar-brand" href="http://localhost:4001/views/employees">Employees</a>
+    <a class="navbar-brand" href="http://localhost:4001/views/carmodels">Car models</a>
   </nav>
 
     <div class="alert alert-primary" role="alert">This is the home page</div>
