--- a/car-shop/public/views/employees.html
+++ b/car-shop/public/views/employees.html
@@ -66,7 +66,7 @@
 
     <div class="row justify-content-center">
       <div class="d-flex flex-row justify-content-center flex-wrap">
-        <button id="refresh-list" class="btn btn-dark mx-3 my-2">refresh list</button>
+        <button id="refresh-list" class="btn btn-dark mx-3 my-2"><i class="fas fa-sync-alt" aria-label="refresh"></i></button>
       </div>
     </div>
 
@@ -77,10 +77,6 @@
           <input type="text" class="form-control" id="id-input" placeholder="Such as &quot;M001&quot;">
         </div>
       </form>
-    </div>
-
-    <div class="row">
-      <div id="response" class="alert alert-secondary d-md-none" role="alert"></div>
     </div>
 
   </div>
