--- a/car-shop/public/views/carmodels.html
+++ b/car-shop/public/views/carmodels.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Car models</title>
+  <title>CarShop - Car models</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- For Google -->
@@ -44,56 +44,46 @@
 <body>
 
 <!-- Content -->
+<nav class="navbar navbar-dark bg-dark fixed-top d-flex justify-content-start">
+  <a class="navbar-brand btn btn-primary" href="http://localhost:4001/">CarShop</a> <a class="navbar-brand" href="http://localhost:4001/views/employees">Employees</a> <a class="navbar-brand" href="http://localhost:4001/views/carmodels">Car models</a>
+</nav>
 
-  <nav class="navbar navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="http://localhost:4001/">CarShop</a>
-    <a class="navbar-brand" href="http://localhost:4001/views/employees">Employees</a>
-    <a class="navbar-brand" href="http://localhost:4001/views/carmodels">Car models</a>
-  </nav>
+<div class="container my-3">
+  <table class="table table-hover" id="car-models-table">
+    <thead class="thead-dark">
+    <tr>
+      <th>Brand</th>
+      <th>ID</th>
+      <th>Model</th>
+      <th>Price</th>
+    </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+  <button class="btn btn-dark mx-3 my-2" id="refresh-list"><i aria-label="refresh" class="fas fa-sync-alt"></i></button>
 
-  <div class="container my-3">
+  <div class="d-flex justify-content-between">
 
-    <table id="car-models-table" class="table table-hover">
-      <thead class="thead-dark">
-      <tr>
-        <th>Brand</th>
-        <th>ID</th>
-        <th>Model</th>
-        <th>Price</th>
-      </tr>
-      </thead>
-      <tbody>
-      </tbody>
-    </table>
+    <form class="p-2" id="delete-carmodel" name="delete-carmodel">
+      <div class="form-group">
+        <label for="id-input-delete">ID</label> <input class="form-control" id="id-input-delete" placeholder="Such as &quot;1&quot;" type="text">
+      </div><button class="btn btn-dark" id="delete-item" type="submit">remove item</button>
+    </form>
 
-    <button id="refresh-list" class="btn btn-dark mx-3 my-2"><i class="fas fa-sync-alt" aria-label="refresh"></i></button>
+    <form class="p-2" id="add-carmodel" name="add-carmodel">
+      <div class="form-group">
+        <label for="brand-input-add">Brand</label> <input class="form-control" id="brand-input-add" placeholder="Such as &quot;Volvo&quot;" type="text">
+      </div>
+      <div class="form-group">
+        <label for="model-input-add">Model</label> <input class="form-control" id="model-input-add" placeholder="Such as &quot;V70&quot;" type="text">
+      </div>
+      <div class="form-group">
+        <label for="price-input-add">Price</label> <input class="form-control" id="price-input-add" placeholder="Such as &quot;30000&quot;" type="text">
+      </div><button class="btn btn-dark" id="add-item" type="submit">add item</button>
+    </form>
+  </div>
 
-    <div class="d-flex justify-content-between">
-      <form id="delete-carmodel" class="p-2">
-        <div class="form-group">
-          <label for="id-input-delete">ID</label>
-          <input type="text" class="form-control" id="id-input-delete" placeholder="Such as &quot;1&quot;">
-        </div>
-        <button id="delete-item"class="btn btn-dark" type="submit">remove item</button>
-      </form>
-      <form id="add-carmodel" class="p-2">
-        <div class="form-group">
-          <label for="brand-input-add">Brand</label>
-          <input type="text" class="form-control" id="brand-input-add" placeholder="Such as &quot;Volvo&quot;">
-        </div>
-        <div class="form-group">
-          <label for="model-input-add">Model</label>
-          <input type="text" class="form-control" id="model-input-add" placeholder="Such as &quot;V70&quot;">
-        </div>
-        <div class="form-group">
-          <label for="price-input-add">Price</label>
-          <input type="text" class="form-control" id="price-input-add" placeholder="Such as &quot;30000&quot;">
-        </div>
-        <button id="add-item" class="btn btn-dark" type="submit">add item</button>
-      </form>
-    </div>
-
-    <div id="response" class="alert alert-secondary" role="alert"></div>
+  <div class="alert alert-secondary" id="response" role="alert"></div>
 
 </div>
 
@@ -101,7 +91,7 @@
 
 <!-- Scripts -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="../javascripts/client.js" type="text/javascript"></script>
+<script src="../javascripts/client-carmodels.js" type="text/javascript"></script>
 </body>
 
 </html>
