--- a/car-shop/public/views/employees.html
+++ b/car-shop/public/views/employees.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Employees</title>
+  <title>CarShop - Employees</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- For Google -->
@@ -36,56 +36,37 @@
 
   <link rel="stylesheet" href="../stylesheets/main.css">
 
+  <link rel="stylesheet" href="  https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 </head>
 
 <body>
 
-<!-- Content -->
+  <!-- Content -->
+  <nav class="navbar navbar-dark bg-dark fixed-top d-flex justify-content-start">
+    <a class="navbar-brand btn btn-primary" href="http://localhost:4001/">CarShop</a> <a class="navbar-brand" href="http://localhost:4001/views/employees">Employees</a> <a class="navbar-brand" href="http://localhost:4001/views/carmodels">Car models</a>
+  </nav>
 
-<nav class="navbar navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href="http://localhost:4001/">CarShop</a>
-  <a class="navbar-brand" href="http://localhost:4001/views/employees">Employees</a>
-  <a class="navbar-brand" href="http://localhost:4001/views/carmodels">Car models</a>
-</nav>
+  <div class="container my-3">
 
-  <div class="container my-5">
-    <div class="row justify-content-center">
-      <table id="employees-table" class="table table-hover">
-        <thead class="thead-dark">
-        <tr>
-          <th>ID</th>
-          <th>Name</th>
-        </tr>
-        </thead>
-        <tbody>
-        </tbody>
-      </table>
-    </div>
-
-    <div class="row justify-content-center">
-      <div class="d-flex flex-row justify-content-center flex-wrap">
-        <button id="refresh-list" class="btn btn-dark mx-3 my-2"><i class="fas fa-sync-alt" aria-label="refresh"></i></button>
-      </div>
-    </div>
-
-    <div class="row">
-      <form>
-        <div class="form-group">
-          <label for="id-input">MemberID</label>
-          <input type="text" class="form-control" id="id-input" placeholder="Such as &quot;M001&quot;">
-        </div>
-      </form>
-    </div>
+    <table class="table table-hover" id="employees-table">
+      <thead class="thead-dark">
+      <tr>
+        <th>ID</th>
+        <th>Name</th>
+      </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+    <button class="btn btn-dark my-2" id="refresh-list"><i aria-label="refresh" class="fas fa-sync-alt"></i></button>
 
   </div>
+  <!-- End of content -->
 
-<!-- End of content -->
-
-<!-- Scripts -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="../javascripts/client.js" type="text/javascript"></script>
+  <!-- Scripts -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="../javascripts/client-employees.js" type="text/javascript"></script>
 </body>
 
 </html>
