--- a/car-shop/public/views/index.html
+++ b/car-shop/public/views/index.html
@@ -42,19 +42,22 @@
 <body>
 
 <!-- Content -->
-  <nav class="navbar navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="http://localhost:4001/">CarShop</a>
-    <a class="navbar-brand" href="http://localhost:4001/views/employees">Employees</a>
-    <a class="navbar-brand" href="http://localhost:4001/views/carmodels">Car models</a>
-  </nav>
+<nav class="navbar navbar-dark bg-dark fixed-top d-flex justify-content-start">
+  <a class="navbar-brand btn btn-primary" href="http://localhost:4001/">CarShop</a> <a class="navbar-brand" href="http://localhost:4001/views/employees">Employees</a> <a class="navbar-brand" href="http://localhost:4001/views/carmodels">Car models</a>
+</nav>
 
-    <div class="alert alert-primary" role="alert">This is the home page</div>
+  <div class="jumbotron">
+    <h1 class="display-3">CarShop!</h1>
+    <p class="lead">Head on over to Employees, Car models or Sales to get started.</p>
+    <hr class="my-2">
+    <p>It uses utility classes for typography and
+      spacing to space content out within the larger container.</p>
+  </div>
 
   <!-- End of content -->
 
   <!-- Scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="../javascripts/client.js" type="text/javascript"></script>
 
   <!--Firebase-->
   <!-- Core Firebase JS SDK -->
