--- a/car-shop/public/views/carmodels.html
+++ b/car-shop/public/views/carmodels.html
@@ -45,7 +45,10 @@
 
 <!-- Content -->
 <nav class="navbar navbar-dark bg-dark fixed-top d-flex justify-content-start">
-  <a class="navbar-brand btn btn-primary" href="http://localhost:4001/">CarShop</a> <a class="navbar-brand" href="http://localhost:4001/views/employees">Employees</a> <a class="navbar-brand" href="http://localhost:4001/views/carmodels">Car models</a>
+  <a class="navbar-brand btn btn-primary" href="http://localhost:4001/">CarShop</a>
+  <a class="navbar-brand" href="http://localhost:4001/views/employees">Employees</a>
+  <a class="navbar-brand" href="http://localhost:4001/views/carmodels">Car models</a>
+  <a class="navbar-brand" href="http://localhost:4001/views/profile">Profile</a>
 </nav>
 
 <div class="container my-3">
@@ -67,7 +70,8 @@
     <form class="p-2" id="delete-carmodel" name="delete-carmodel">
       <div class="form-group">
         <label for="id-input-delete">ID</label> <input class="form-control" id="id-input-delete" placeholder="Such as &quot;1&quot;" type="text">
-      </div><button class="btn btn-dark" id="delete-item" type="submit">remove item</button>
+      </div>
+      <button class="btn btn-dark" id="delete-item" type="submit">remove item</button>
     </form>
 
     <form class="p-2" id="add-carmodel" name="add-carmodel">
@@ -79,7 +83,8 @@
       </div>
       <div class="form-group">
         <label for="price-input-add">Price</label> <input class="form-control" id="price-input-add" placeholder="Such as &quot;30000&quot;" type="text">
-      </div><button class="btn btn-dark" id="add-item" type="submit">add item</button>
+      </div>
+      <button class="btn btn-dark" id="add-item" type="submit">add item</button>
     </form>
   </div>
 
