--- a/car-shop/public/views/employees.html
+++ b/car-shop/public/views/employees.html
@@ -45,7 +45,10 @@
 
   <!-- Content -->
   <nav class="navbar navbar-dark bg-dark fixed-top d-flex justify-content-start">
-    <a class="navbar-brand btn btn-primary" href="http://localhost:4001/">CarShop</a> <a class="navbar-brand" href="http://localhost:4001/views/employees">Employees</a> <a class="navbar-brand" href="http://localhost:4001/views/carmodels">Car models</a>
+    <a class="navbar-brand btn btn-primary" href="http://localhost:4001/">CarShop</a>
+    <a class="navbar-brand" href="http://localhost:4001/views/employees">Employees</a>
+    <a class="navbar-brand" href="http://localhost:4001/views/carmodels">Car models</a>
+    <a class="navbar-brand" href="http://localhost:4001/views/profile">Profile</a>
   </nav>
 
   <div class="container my-3">
