--- a/car-shop/public/views/profile.html
+++ b/car-shop/public/views/profile.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>CarShop - Home</title>
+  <title>CarShop - Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- For Google -->
@@ -35,6 +35,8 @@
   <meta name="theme-color" content="">
 
   <link rel="stylesheet" href="../stylesheets/main.css">
+
+  <link rel="stylesheet" href="  https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 </head>
@@ -42,33 +44,44 @@
 <body>
 
 <!-- Content -->
-<nav class="navbar navbar-dark bg-dark fixed-top d-flex justify-content-start">
-  <a class="navbar-brand btn btn-primary" href="http://localhost:4001/">CarShop</a>
-  <a class="navbar-brand" href="http://localhost:4001/views/employees">Employees</a>
-  <a class="navbar-brand" href="http://localhost:4001/views/carmodels">Car models</a>
-  <a class="navbar-brand" href="http://localhost:4001/views/profile">Profile</a>
-</nav>
+  <nav class="navbar navbar-dark bg-dark fixed-top d-flex justify-content-start">
+    <a class="navbar-brand btn btn-primary" href="http://localhost:4001/">CarShop</a>
+    <a class="navbar-brand" href="http://localhost:4001/views/employees">Employees</a>
+    <a class="navbar-brand" href="http://localhost:4001/views/carmodels">Car models</a>
+    <a class="navbar-brand" href="http://localhost:4001/views/profile">Profile</a>
+  </nav>
 
-  <div class="jumbotron">
-    <h1 class="display-3">CarShop</h1>
-    <p class="lead">Head on over to Employees, Car models or Sales to get started.</p>
-    <hr class="my-2">
-    <p>It uses utility classes for typography and
-      spacing to space content out within the larger container.</p>
+  <div class="container my-3">
+
+    <form id="auth-form">
+      <div class="form-group">
+        <label for="username">Email</label>
+        <input type="email" class="form-control" id="username" placeholder="jane@doe.com...">
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" id="password" placeholder="A secure password...">
+      </div>
+      <button class="btn btn-dark" id="login-button" type="submit">login</button>
+      <button class="btn btn-dark mx-2" id="signup-button" type="submit">signup</button>
+    </form>
+
+    <button class="btn btn-dark my-2" id="logout-button" type="submit">logout</button>
+
+    <ul class="list-group">
+      <li class="list-group-item"><strong>Name: </strong></li>
+      <li class="list-group-item"><strong>Email: </strong></li>
+    </ul>
+
+    </div>
+
   </div>
 
   <!-- End of content -->
 
   <!-- Scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-  <!--Firebase-->
-  <!-- Core Firebase JS SDK -->
-  <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
-
-  <!-- TODO: Add SDKs for Firebase products that you want to use
-       https://firebase.google.com/docs/web/setup#available-libraries -->
-  <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-analytics.js"></script>
+  <script src="../javascripts/client-profile.js" type="text/javascript"></script>
 
 </body>
 
