--- a/car-shop/public/views/employees.html
+++ b/car-shop/public/views/employees.html
@@ -48,6 +48,7 @@
     <a class="navbar-brand btn btn-primary" href="http://localhost:4001/">CarShop</a>
     <a class="navbar-brand" href="http://localhost:4001/views/employees">Employees</a>
     <a class="navbar-brand" href="http://localhost:4001/views/carmodels">Car models</a>
+    <a class="navbar-brand" href="http://localhost:4001/views/sales">Sales</a>
     <a class="navbar-brand" href="http://localhost:4001/views/profile">Profile</a>
   </nav>
 
