--- a/car-shop/public/views/sales.html
+++ b/car-shop/public/views/sales.html
@@ -1,10 +1,77 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Title</title>
+  <meta charset="utf-8">
+  <title>CarShop - Sales</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- For Google -->
+  <meta name="description" content="" />
+  <meta name="author" content="Tarek Bermalm" />
+  <meta name="copyright" content="" />
+  <meta name="application-name" content="" />
+
+  <!-- For Facebook -->
+  <meta property="og:title" content="" />
+  <meta property="og:type" content="" />
+  <meta property="og:image" content="" />
+  <meta property="og:url" content="" />
+  <meta property="og:description" content="" />
+
+  <!-- For Twitter -->
+  <meta name="twitter:card" content=""/>
+  <meta name="twitter:title" content="" />
+  <meta name="twitter:description" content="" />
+  <meta name="twitter:image" content="" />
+
+  <!--tags from https://realfavicongenerator.net/-->
+  <link rel="apple-touch-icon" sizes="180x180" href="">
+  <link rel="icon" type="image/png" sizes="32x32" href="">
+  <link rel="icon" type="image/png" sizes="16x16" href="">
+  <link rel="manifest" href="">
+  <link rel="mask-icon" href="" color="#f4cb84">
+  <link rel="shortcut icon" href="">
+  <meta name="theme-color" content="">
+
+  <link rel="stylesheet" href="../stylesheets/main.css">
+
+  <link rel="stylesheet" href="  https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 </head>
+
 <body>
 
+<!-- Content -->
+<nav class="navbar navbar-dark bg-dark fixed-top d-flex justify-content-start">
+  <a class="navbar-brand btn btn-primary" href="http://localhost:4001/">CarShop</a>
+  <a class="navbar-brand" href="http://localhost:4001/views/employees">Employees</a>
+  <a class="navbar-brand" href="http://localhost:4001/views/carmodels">Car models</a>
+  <a class="navbar-brand" href="http://localhost:4001/views/sales">Sales</a>
+  <a class="navbar-brand" href="http://localhost:4001/views/profile">Profile</a>
+</nav>
+
+<div class="container my-3">
+
+  <table class="table table-hover" id="sales-table">
+    <thead class="thead-dark">
+    <tr>
+      <th>ID</th>
+      <th>Name</th>
+      <th>Total sales</th>
+    </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+  <button class="btn btn-dark my-2" id="refresh-list"><i aria-label="refresh" class="fas fa-sync-alt"></i></button>
+
+</div>
+<!-- End of content -->
+
+<!-- Scripts -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="../javascripts/client-employees.js" type="text/javascript"></script>
 </body>
+
 </html>
