--- a/car-shop/public/views/sales.html
+++ b/car-shop/public/views/sales.html
@@ -54,7 +54,7 @@
 
 <div class="container my-3">
 
-  <table class="table table-hover" id="sales-table">
+  <table class="table table-hover">
     <thead class="thead-dark">
     <tr>
       <th>ID</th>
@@ -71,7 +71,7 @@
 
 <!-- Scripts -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="../javascripts/client-employees.js" type="text/javascript"></script>
+<script src="../javascripts/client-sales.js" type="text/javascript"></script>
 </body>
 
 </html>
