--- a/car-shop/public/views/index.html
+++ b/car-shop/public/views/index.html
@@ -47,15 +47,14 @@
   <a class="navbar-brand" href="http://localhost:4001/views/employees">Employees</a>
   <a class="navbar-brand" href="http://localhost:4001/views/carmodels">Car models</a>
   <a class="navbar-brand" href="http://localhost:4001/views/sales">Sales</a>
-  <a class="navbar-brand" href="http://localhost:4001/views/profile">Profile</a>
+  <a class="navbar-brand ml-auto" href="http://localhost:4001/views/profile">Profile</a>
 </nav>
 
-  <div class="jumbotron">
+  <div class="jumbotron bg-white">
     <h1 class="display-3">CarShop</h1>
-    <p class="lead">Head on over to Employees, Car models or Sales to get started.</p>
+    <p class="lead">All your data in one place.</p>
     <hr class="my-2">
-    <p>It uses utility classes for typography and
-      spacing to space content out within the larger container.</p>
+    <p>Head on over to one of the pages above to get started.</p>
   </div>
 
   <!-- End of content -->
