--- a/car-shop/public/views/profile.html
+++ b/car-shop/public/views/profile.html
@@ -34,10 +34,9 @@
   <link rel="shortcut icon" href="">
   <meta name="theme-color" content="">
 
-  <link rel="stylesheet" href="../stylesheets/main.css">
-
   <link rel="stylesheet" href="  https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="../stylesheets/main.css">
 
 </head>
 
@@ -49,7 +48,7 @@
     <a class="navbar-brand" href="http://localhost:4001/views/employees">Employees</a>
     <a class="navbar-brand" href="http://localhost:4001/views/carmodels">Car models</a>
     <a class="navbar-brand" href="http://localhost:4001/views/sales">Sales</a>
-    <a class="navbar-brand" href="http://localhost:4001/views/profile">Profile</a>
+    <a class="navbar-brand ml-auto" href="http://localhost:4001/views/profile">Profile</a>
   </nav>
 
   <div class="container my-3">
@@ -61,8 +60,8 @@
           <input type="email" class="form-control" id="username" placeholder="jane@doe.com...">
         </div>
         <div class="form-group">
-          <label for="employee-id">Employee ID</label>
-          <input type="text" class="form-control" id="employee-id" placeholder="Such as &quot;1&quot;">
+<!--          <label for="employee-id">Employee ID</label>-->
+<!--          <input type="text" class="form-control" id="employee-id" placeholder="Such as &quot;1&quot;">-->
         </div>
         <div class="form-group">
           <label for="password">Password</label>
@@ -81,14 +80,45 @@
       </ul>
       <button class="btn btn-dark my-2" id="logout-button" type="submit">logout</button>
       <button class="btn btn-dark my-2" id="reset-password" type="submit">reset password</button>
+
+      <div id="set-employee-id" class="container">
+        <label for="employee-id">Set EmployeeID:</label>
+        <input type="text" class="form-control w-50" id="employee-id" placeholder="Such as &quot;1&quot;">
+        <button class="btn btn-dark my-2" id="change-employee-id" type="button">reset password</button>
+      </div>
+
     </div>
+
+    <!-- Modal -->
+    <div class="modal" id="response-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenteredLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalCenteredLabel">Something went wrong.</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Okay</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
   </div>
 
   <!-- End of content -->
 
   <!-- Scripts -->
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script src="../javascripts/client-profile.js" type="text/javascript"></script>
 
 </body>
