working empid set

--- a/car-shop/public/views/profile.html
+++ b/car-shop/public/views/profile.html
@@ -82,9 +82,9 @@
       <button class="btn btn-dark my-2" id="reset-password" type="submit">reset password</button>
 
       <div id="set-employee-id" class="container">
-        <label for="employee-id">Set EmployeeID:</label>
-        <input type="text" class="form-control w-50" id="employee-id" placeholder="Such as &quot;1&quot;">
-        <button class="btn btn-dark my-2" id="change-employee-id" type="button">reset password</button>
+        <label for="employee-id-input">Set EmployeeID:</label>
+        <input type="text" class="form-control w-50" id="employee-id-input" placeholder="Such as &quot;1&quot;">
+        <button class="btn btn-dark my-2" id="change-employee-id" type="button">Change</button>
       </div>
 
     </div>
