--- a/car-shop/public/views/carmodels.html
+++ b/car-shop/public/views/carmodels.html
@@ -35,6 +35,8 @@
   <meta name="theme-color" content="">
 
   <link rel="stylesheet" href="../stylesheets/main.css">
+
+  <link rel="stylesheet" href="  https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 </head>
