--- a/css/main.css
+++ b/css/main.css
@@ -199,6 +199,10 @@ article {
 a { color: #dc8100; text-decoration: none; }
 a:hover { color: white; text-decoration: none; }
 
+.small {
+  font-size: 10px;
+}
+
 /* ==========================================================================
    EXAMPLE Media Queries for Responsive Design.
    These examples override the primary ('mobile first') styles.
