--- a/css/main.css
+++ b/css/main.css
@@ -170,7 +170,7 @@ textarea {
 }
 
 /**********************************
-mine mine mine mien mine
+real content
 ***********************************/
 
 #container {
