--- a/home-page/style/main.css
+++ b/home-page/style/main.css
@@ -39,7 +39,7 @@ a:visited {
 input {
   border: none;
   border-bottom: 2px solid #fff;
-  min-width: 750px;
+  min-width: 75%;
   max-width: 900px;
   width: 75%;
   padding-bottom: 10px;
